--- a/src/app/main/components/left/left.component.html
+++ b/src/app/main/components/left/left.component.html
@@ -1,9 +1,11 @@
 <div class="about-me">
     <h2>{{info.home.greeting}}</h2>
     <p>{{info.home.presentation}}</p>
-    <h3 class="title">Tecnologies</h3>
+    <!-- <h3 class="title">Tecnologies</h3>
     <ul class="technologies-list">
-        <li *ngFor="let tecnology of tecnologies" class="tecnologies-item"><img [src]="'assets/images/tecnologies/' + tecnology + '.png'" alt="{{ tecnology }}">
+        <li *ngFor="let tecnology of tecnologies" class="tecnologies-item"><img
+                [src]="'assets/images/tecnologies/' + tecnology + '.png'" alt="{{ tecnology }}">
         </li>
-    </ul>
+
+    </ul> -->
 </div>
