--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,2 +1,4 @@
-<app-left [info]="info" class="left"></app-left>
-<app-right [info]="info" class="right"></app-right>
+<div class="container">
+    <app-left [info]="info" class="left"></app-left>
+    <app-right [info]="info" class="right"></app-right>
+</div>
