--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -1,10 +1,53 @@
 :host {
     display: flex;
-    flex-direction: column;
-    background-color: rgba(0, 0, 0, 0.048);
+    flex-direction: row;
     color: white;
     text-align: center;
-    padding: 20px 120px;
+    padding: 20px 120px 20px 60px;
+    width: 100%;
+    height: 100vh;
+}
+
+.info {
+    display: block;
+    width: 50%;
+    background-color: rgba(255, 255, 255, 0.1);
+    backdrop-filter: blur(10px);
+    border-radius: 30px;
+    padding: 20px 30px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    height: fit-content;
+    min-height: 100%;
+}
+
+.info p {
+    text-align: start;
+    line-height: 1.7;
+    width: 100%;
+    font-size: 100%;
+}
+
+.info ul {
+    margin-top: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.socials a img {
+    width: 30%;
+    filter: invert(100%);
+    transition: .4s ease;
+}
+
+.socials a img:hover {
+    filter: invert(100%) brightness(0.5) sepia(100%) saturate(3) hue-rotate(150deg) drop-shadow(0 0 10px rgba(175, 232, 235, 0.63));
+}
+
+.skills {
+
+    width: 50%;
+
 }
 
 h1 {
@@ -12,8 +55,8 @@ h1 {
     margin: 30px 0;
 }
 
-p {
-    line-height: 1.7;
+h2 {
+    margin-left: 30px;
 }
 
 .skills {
@@ -33,28 +76,44 @@ p {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 10px;
+    margin-left: 30px;
+    margin-top: 30px;
     font-size: 20px;
 }
 
-.skills-info div {
-    width: 120px;
-    height: 15px;
-    background-color: rgba(255, 255, 255, 0.288);
-    border-radius: 20px;
-    overflow: hidden;
+.skill-circle {
+    position: relative;
+    width: 100px;
+    height: 100px;
     display: flex;
     align-items: center;
+    justify-content: center;
 }
 
-.skills-info div span {
-    font-size: small;
-    display: block;
+.skill-level {
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    overflow: hidden;
+    position: relative;
+    width: 100%;
     height: 100%;
-    width: 75%;
-    background: linear-gradient(to left, green, rgba(0, 255, 85, 0.466));
-
+    border-radius: 50%;
+    background: conic-gradient(#00eeff29 var(--skill-level),
+            rgba(255, 255, 255, 0.1) var(--skill-level));
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
+
+.skill-level img {
+    height: 70px;
+    width: 70px;
+    object-fit: cover;
+    filter: invert(100%);
+    border-radius: 50%;
+    background-color: rgba(255, 255, 255, 0.2);
+}
+
+
 
 @media screen and (max-width: 915px) {
 
