--- a/src/app/main/components/left/left.component.css
+++ b/src/app/main/components/left/left.component.css
@@ -1,30 +1,33 @@
 :host {
     display: flex;
-    background-color: rgba(0, 0, 0, 0.048);
     justify-content: center;
 }
 
 .about-me {
-    padding: 20px;
     color: white;
-    margin: 45px auto 0 auto;
     z-index: 0;
+    border-radius: 30px;
+
+    width: 80%;
+    height: 90%;
 }
 
 .about-me h2 {
-    margin-bottom: 30px;
-    text-align: center;
-    font-size: 24px;
+    margin-bottom: 25px;
+    margin-left: 15px;
+    text-align: start;
+    font-size: 2.5em;
 }
 
 .about-me p {
     padding: 0 15px;
-    text-align: center;
+    text-align: start;
     line-height: 1.7;
+    font-size: 1.2em;
 }
 
 .about-me h3 {
-    margin-top: 40px;
+    margin-top: 20px;
     text-align: center;
 }
 
@@ -51,13 +54,16 @@
 
 .tecnologies-item {
     position: relative;
-    height: 85px;
     overflow: hidden;
     transition: transform .3s ease;
+    filter: grayscale(80%);
+    height: 80px;
 }
 
 .tecnologies-item:hover {
+    z-index: 9;
     transform: scale(1.5);
+    filter: grayscale(0%);
 }
 
 .tecnologies-item img {
@@ -66,6 +72,7 @@
     top: 50%;
     left: 50%;
     width: 100%;
+    height: 100%;
     object-fit: cover;
     object-position: center;
     transform: translate(-50%, -50%);
