--- a/src/app/main/components/right/right.component.css
+++ b/src/app/main/components/right/right.component.css
@@ -1,26 +1,36 @@
 :host {
     display: block;
-    background-color: rgba(0, 0, 0, 0.048);
     z-index: 0;
+    height: 100%;
 }
+
+.container {
+    width: 90%;
+    border-radius: 30px;
+    height: 90%;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
 
 .title {
     color: white;
     font-size: 24px;
-    margin-top: 60px;
     text-align: center;
 }
 
 .projects {
     width: 100%;
-    height: calc(95vh - 80px);
+    height: calc(70vh - 80px);
     padding: 10px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     align-content: flex-start;
     overflow-y: auto;
-    gap: 10px;
+    gap: 40px;
 }
 
 .projects::-webkit-scrollbar {
@@ -33,18 +43,16 @@
 }
 
 .projects::-webkit-scrollbar-thumb {
-    background: #88888800;
+    background: #888888;
     border-radius: 5px;
 }
 
-.projects::-webkit-scrollbar-thumb:hover {
-    background: #555;
-}
+
 
 .project {
     display: block;
-    width: 240px;
-    height: 220px;
+    width: 45%;
+    height: 45%;
     cursor: pointer;
     position: relative;
     transition: .4s ease;
@@ -52,6 +60,7 @@
     z-index: 99;
     border-radius: 10px;
     overflow: hidden;
+    filter: grayscale(80%);
 }
 
 .project img {
@@ -78,12 +87,15 @@
 }
 
 .project.expanded .project-info {
+    filter: grayscale(0%);
+
     scale: 1;
 }
 
 .project.expanded {
-    width: 495px;
+    width: 100%;
     z-index: 999;
+    filter: grayscale(0%);
 }
 
 a {
