--- a/src/app/main/main.component.css
+++ b/src/app/main/main.component.css
@@ -1,30 +1,48 @@
 :host {
+    width: 100%;
+    height: 100vh;
+    padding-top: 40px;
+    padding-left: 30px;
+    padding-right: 30px;
+}
+
+.container {
     display: flex;
-    background-color: rgba(0, 0, 0, 0.048);
+    flex-direction: row;
+    align-items: center;
+    border-radius: 30px;
+    background-color: rgba(255, 255, 255, .1);
+    backdrop-filter: blur(10px);
+    width: 90%;
+    margin-left: 5%;
+    height: 94%;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 }
 
 .right {
-    width: 50%;
-    height: 100%;
+    width: 60%;
 }
 
 .left {
-    width: 50%;
-    height: 100%;
+    width: 40%;
 }
 
 @media screen and (max-width: 1200px) {
+    .container {
+        padding: 20px 0;
+    }
+
     .left {
-        width: 70%;
+        width: 50%;
     }
 
     .right {
-        width: 30%;
+        width: 50%;
     }
 }
 
 @media screen and (max-width: 915px) {
-    :host {
+    .container {
         flex-direction: column;
     }
 
