--- a/src/app/wid/wid.component.css
+++ b/src/app/wid/wid.component.css
@@ -1,45 +1,54 @@
 :host {
+    width: 100%;
+    height: 100vh;
     display: flex;
-    flex-direction: column;
-    background-color: rgba(0, 0, 0, 0.048);
-    transition: .5s ease;
+    justify-content: center;
+    align-items: center;
     color: white;
-    text-align: center;
-    padding: 20px 0px;
-}
-
-h1 {
-    margin: 50px 0 60px 0;
-    font-size: xx-large;
 }
 
 .container {
-    width: 100%;
+    background-color: rgba(255, 255, 255, 0.1);
+    backdrop-filter: blur(10px);
+    border-radius: 30px;
+    padding: 40px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+}
+
+swiper-container {
+    width: 800px;
+    height: 500px;
+}
+
+swiper-slide {
     display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    flex-wrap: wrap;
+    flex-direction: column;
+}
+
+swiper-slide h3 {
+    font-size: 40px;
+    margin-bottom: 30px;
+    margin-top: 30px;
+
+}
+
+.content {
+    display: flex;
+}
+
+.data {
+    width: 45%;
+}
+
+.data p {
+    line-height: 1.7;
+    margin-right: 10px;
+}
+
+.content img {
+    width: 55%;
+    margin-left: 10px;
+    display: flex;
+    align-self: center;
     justify-content: center;
-}
-
-.item {
-    width: 300px;
-    display: flex;
-    margin: 20px 40px;
-}
-
-.item img {
-    width: 70px;
-    height: 70px;
-    margin-top: 20px;
-
-}
-
-.text h2 {
-    font-size: larger;
-    margin-bottom: 10px;
-}
-
-.text p {
-    font-size: small;
 }
