--- a/src/app/works/works.component.css
+++ b/src/app/works/works.component.css
@@ -1,15 +1,16 @@
 :host {
     display: flex;
-    background-color: rgba(0, 0, 0, 0.048);
     transition: .5s ease;
     font-size: 20px;
     color: white;
+    width: 100%;
+    height: 100vh;
 }
 
 .projects {
     display: flex;
     justify-content: center;
-    align-content: center;
+    align-content: start;
     flex-wrap: wrap;
     padding: 0 40px;
     margin: 0 auto;
@@ -19,7 +20,7 @@
 .project {
     box-shadow: 0 0 10px black;
     cursor: pointer;
-    width: 300px;
+    width: 45%;
     height: 200px;
     margin: 10px;
     border-radius: 10px;
