adding more styles

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -2,14 +2,14 @@
     <h1>{{info.about.title}}</h1>
     <p>{{info.about.description}}</p>
     <ul>
-        <li class="socials"><a href="https://github.com/brunorodrig" target="_blank"><img
+        <li class="socials"><a href="https://github.com/AngelGaitanG" target="_blank"><img
                     src="../../assets/images/socials/github.svg" alt="github"></a></li>
-        <li class="socials"><a href="https://github.com/brunorodrig" target="_blank"><img
+        <li class="socials"><a href="https://www.linkedin.com/in/angelgabrielgaitan/" target="_blank"><img
                     src="../../assets/images/socials/linkedin.svg" alt="linkedin"></a></li>
-        <li class="socials"><a href="https://github.com/brunorodrig" target="_blank"><img
-                    src="../../assets/images/socials/instagram.svg" alt="instagram"></a></li>
-        <li class="socials"><a href="https://github.com/brunorodrig" target="_blank"><img
-                    src="../../assets/images/socials/discord.svg" alt="discord"></a></li>
+        <li class="socials"><a href="#" target="_blank"><img src="../../assets/images/socials/instagram.svg"
+                    alt="instagram"></a></li>
+        <li class="socials"><a href="#" target="_blank"><img src="../../assets/images/socials/discord.svg"
+                    alt="discord"></a></li>
     </ul>
 </div>
 <div class="skills">
