--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -118,7 +118,20 @@ h2 {
 @media screen and (max-width: 915px) {
 
     :host {
-        padding: 30px;
+
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .info {
+        width: 100%;
+        font-size: 14px;
+        min-height: inherit;
+        height: fit-content;
+    }
+
+    .skills {
+        width: 100%;
     }
 
 }
