--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -118,7 +118,7 @@ h2 {
 @media screen and (max-width: 915px) {
 
     :host {
-
+        padding: 0;
         flex-direction: column;
         align-items: center;
     }
@@ -131,7 +131,17 @@ h2 {
     }
 
     .skills {
+        padding-bottom: 20px;
         width: 100%;
+    }
+
+    h2 {
+        margin: 0;
+    }
+
+    .skills-info {
+        margin-left: 0;
+
     }
 
 }
